<resources>
    <string name="app_launcher_name">MediaVox</string>
    <string name="edit">Edit</string>
    <string name="open_camera">Open camera</string>
    <string name="hidden">(hidden)</string>
    <string name="history">History</string>
    <string name="excluded">(excluded)</string>
    <string name="pin_folder">Pin folder</string>
    <string name="unpin_folder">Unpin folder</string>
    <string name="pin_to_the_top">Pin to the top</string>
    <string name="show_all">Show all folders content</string>
    <string name="all_folders">All folders</string>
    <string name="folder_view">Switch to folder view</string>
    <string name="other_folder">Other folder</string>
    <string name="show_on_map">Show on map</string>
    <string name="unknown_location">Unknown location</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="lock_orientation">Lock orientation</string>
    <string name="unlock_orientation">Unlock orientation</string>
    <string name="change_orientation">Change orientation</string>
    <string name="force_portrait">Force portrait</string>
    <string name="force_landscape">Force landscape</string>
    <string name="use_default_orientation">Use default orientation</string>
    <string name="fix_date_taken">Fix Date Taken value</string>
    <string name="fixing">Fixing…</string>
    <string name="dates_fixed_successfully">Dates fixed successfully</string>
    <string name="no_date_takens_found">No Date Taken values have been found</string>
    <string name="share_resized">Share a resized version</string>
    <string name="switch_to_file_search">Switch to file search across all visible folders</string>
    <string name="set_as_default_folder">Set as default folder</string>
    <string name="unset_as_default_folder">Unset as default folder</string>
    <string name="reorder_by_dragging">Reorder folders by dragging</string>
    <string name="reorder_by_dragging_pro">Reorder folders by dragging (Pro)</string>
    <string name="restore_to_path">Restoring to \'%s\'</string>
    <string name="filter_media">Filter media</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="media_configuration">Media Configuration</string>
    <string name="no_media_with_filters">No media files have been found with the selected filters.</string>
    <string name="change_filters_underlined"><u>Change filters</u></string>
    <string name="hide_folder_description">This function hides the folder by adding a \'.nomedia\' file into it, it will hide all subfolders too. You can see them by toggling the \'Show hidden items\' option in Settings. Continue?</string>
    <string name="exclude_folder_description">This will exclude the selection together with its subfolders from Fossify Gallery only. You can manage excluded folders in Settings.</string>
    <string name="exclude_folder_parent">Exclude a parent instead?</string>
    <string name="excluded_activity_placeholder">Excluding folders will make them together with their subfolders hidden just in Fossify Gallery, they will still be visible in other applications.\n\nIf you want to hide them from other apps too, use the Hide function.</string>
    <string name="hidden_folders">Hidden folders</string>
    <string name="manage_hidden_folders">Manage hidden folders</string>
    <string name="hidden_folders_placeholder">Seems like you don\'t have any folders hidden with a \".nomedia\" file.</string>
    <string name="hidden_all_files">You have to grant the app All Files access to see hidden files, else it cannot work.</string>
    <string name="cant_unhide_folder">If a folder or one of its parent folders has a dot before its name, it is hidden and cannot be unhidden like this. You have to remove the dot by renaming it.</string>
    <string name="include_folders">Included folders</string>
    <string name="manage_included_folders">Manage included folders</string>
    <string name="add_folder">Add folder</string>
    <string name="included_activity_placeholder">If you have some folders which contain media, but were not recognized by the app, you can add them manually here.\n\nAdding some items here will not exclude any other folder.</string>
    <string name="no_media_add_included">No media files have been found. You can solve it by adding the folders containing media files manually.</string>
    <string name="slideshow">Slideshow</string>
    <string name="interval">Interval</string>
    <string name="include_photos">Include photos</string>
    <string name="include_videos">Include videos</string>
    <string name="include_gifs">Include GIFs</string>
    <string name="random_order">Random order</string>
    <string name="move_backwards">Move backwards</string>
    <string name="loop_slideshow">Loop slideshow</string>
    <string name="animation">Animation</string>
    <string name="no_animation">None</string>
    <string name="fade">Fade</string>
    <string name="slide">Slide</string>
    <string name="slideshow_ended">The slideshow ended</string>
    <string name="no_media_for_slideshow">No media for the slideshow have been found</string>
    <string name="group_direct_subfolders">Group direct subfolders</string>
    <string name="group_by">Group by</string>
    <string name="do_not_group_files">Do not group files</string>
    <string name="by_folder">Folder</string>
    <string name="by_last_modified">Last modified</string>
    <string name="by_last_modified_daily">Last modified (daily)</string>
    <string name="by_last_modified_monthly">Last modified (monthly)</string>
    <string name="by_date_taken">Date taken</string>
    <string name="by_date_taken_daily">Date taken (daily)</string>
    <string name="by_date_taken_monthly">Date taken (monthly)</string>
    <string name="by_file_type">File type</string>
    <string name="by_extension">Extension</string>
    <string name="show_file_count_section_header">Show file count at section headers</string>
    <string name="grouping_and_sorting">Please note that grouping and sorting are 2 independent fields</string>
    <string name="folder_on_widget">Folder shown on the widget:</string>
    <string name="show_folder_name">Show folder name</string>
    <string name="autoplay_videos">Play videos automatically</string>
    <string name="remember_last_video_position">Remember last video playback position</string>
    <string name="loop_videos">Loop videos</string>
    <string name="animate_gifs">Animate GIFs at thumbnails</string>
    <string name="max_brightness">Max brightness when viewing fullscreen media</string>
    <string name="crop_thumbnails">Crop thumbnails into squares</string>
    <string name="show_thumbnail_video_duration">Show video durations</string>
    <string name="screen_rotation_by">Rotate fullscreen media by</string>
    <string name="screen_rotation_system_setting">System setting</string>
    <string name="screen_rotation_device_rotation">Device rotation</string>
    <string name="screen_rotation_aspect_ratio">Aspect ratio</string>
    <string name="black_background_at_fullscreen">Black background at fullscreen media</string>
    <string name="scroll_thumbnails_horizontally">Scroll thumbnails horizontally</string>
    <string name="hide_system_ui_at_fullscreen">Automatically hide system UI at fullscreen media</string>
    <string name="delete_empty_folders">Delete empty folders after deleting their content</string>
    <string name="allow_photo_gestures">Allow controlling photo brightness with vertical gestures</string>
    <string name="allow_video_gestures">Allow controlling video volume and brightness with vertical gestures</string>
    <string name="show_media_count">Show folder media count on the main view</string>
    <string name="show_extended_details">Show extended details over fullscreen media</string>
    <string name="manage_extended_details">Manage extended details</string>
    <string name="one_finger_zoom">Allow one finger zoom at fullscreen media</string>
    <string name="allow_instant_change">Allow instantly changing media by clicking on screen sides</string>
    <string name="allow_deep_zooming_images">Allow deep zooming images</string>
    <string name="hide_extended_details">Hide extended details when status bar is hidden</string>
    <string name="show_at_bottom">Show some action buttons at the bottom of the screen</string>
    <string name="show_recycle_bin">Show the Recycle Bin at the folders screen</string>
    <string name="deep_zoomable_images">Deep zoomable images</string>
    <string name="show_highest_quality">Show images in the highest possible quality</string>
    <string name="show_recycle_bin_last">Show the Recycle Bin as the last item on the main screen</string>
    <string name="allow_down_gesture">Allow closing the fullscreen view with a down gesture</string>
    <string name="allow_one_to_one_zoom">Allow 1:1 zooming in with two double taps</string>
    <string name="open_videos_on_separate_screen">Always open videos on a separate screen with new horizontal gestures</string>
    <string name="show_notch">Show a notch if available</string>
    <string name="allow_rotating_gestures">Allow rotating images with gestures</string>
    <string name="file_loading_priority">File loading priority</string>
    <string name="speed">Speed</string>
    <string name="compromise">Compromise</string>
    <string name="avoid_showing_invalid_files">Avoid showing invalid files</string>
    <string name="show_image_file_types">Show file types</string>
    <string name="show_image_file_dir">Show file directory</string>
    <string name="show_image_file_size">Show file size</string>
    <string name="allow_zooming_videos">Allow zooming videos with double tapping them</string>
    <string name="folder_thumbnail_style">Folder thumbnail style</string>
    <string name="file_thumbnail_style">File thumbnail style</string>
    <string name="mark_favorite_items">Mark favorite items</string>
    <string name="thumbnail_spacing">Thumbnail spacing</string>
    <string name="show_file_count_line">Show file count on a separate line</string>
    <string name="show_file_count_brackets">Show file count in brackets</string>
    <string name="show_file_count_none">Do not show file count</string>
    <string name="limit_folder_title">Limit long folder titles to 1 line</string>
    <string name="show_folder_size">Show Folder Size</string>
    <string name="square">Square</string>
    <string name="rounded_corners">Rounded corners</string>
    <string name="export_favorite_paths">Export favorites</string>
    <string name="import_favorite_paths">Import favorites</string>
    <string name="paths_imported_successfully">Paths imported successfully</string>
    <string name="media_management_prompt">To make sure that all file operations work reliably, please make this app a Media management app in your device settings.</string>
    <string name="password_protect_excluded">Password protect excluded folder visibility</string>
    <string name="media_management_manual">Something went wrong, please go into your device Settings - Apps - Special app access - Media management apps and allow this app to manage media.</string>
    <string name="media_management_note">If the redirection does not work, please go into your device Settings - Apps - Special app access - Media management apps and allow this app to manage media.</string>
    <string name="media_management_alternative">If you do not want to do it, you can also go into your device Settings - Apps - Special app access - Media management apps and allow this app to manage media.</string>
    <string name="alternative_media_access">Alternatively, you can allow accessing media files only. In that case you will not be able to work with hidden files though.</string>
    <string name="media_only">Media only</string>
    <string name="manage_bottom_actions">Manage visible bottom actions</string>
</resources>