<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dialog_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/dialog_file_style_rounded_corners_holder"
            style="@style/SettingsHolderCheckboxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground">

            <org.skywaves.mediavox.core.views.MyAppCompatCheckbox
                android:id="@+id/dialog_file_style_rounded_corners"
                style="@style/SettingsCheckboxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rounded_corners" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dialog_file_style_show_thumbnail_file_types_holder"
            style="@style/SettingsHolderCheckboxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground">

            <org.skywaves.mediavox.core.views.MyAppCompatCheckbox
                android:id="@+id/dialog_file_style_show_thumbnail_file_types"
                style="@style/SettingsCheckboxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_image_file_types" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dialog_file_style_show_file_dirs_holder"
            style="@style/SettingsHolderCheckboxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground">

            <org.skywaves.mediavox.core.views.MyAppCompatCheckbox
                android:id="@+id/dialog_file_style_show_thumbnail_file_dir"
                style="@style/SettingsCheckboxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_image_file_dir" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
